[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://rectangle-outline.png" type="Texture" id=2]
[ext_resource path="res://953353_1_1214-alexander-hamilton-10-bill_standard.png" type="Texture" id=3]
[ext_resource path="res://SeekPng.com_playing-card-back-png_1215767.png" type="Texture" id=4]
[ext_resource path="res://kindpng_825156.png" type="Texture" id=5]
[ext_resource path="res://SeekPng.com_ace-of-spades-png_1789347.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonLeft" type="Button" parent="."]
margin_top = 400.0
margin_right = 250.0
margin_bottom = 425.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="Button" parent="."]
visible = false
margin_left = 520.0
margin_top = 400.0
margin_right = 770.0
margin_bottom = 425.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPlayerMoney" type="RichTextLabel" parent="."]
margin_top = 500.0
margin_right = 100.0
margin_bottom = 540.0
rect_scale = Vector2( 2, 2 )
text = "Your money on the table:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextOppMoney" type="RichTextLabel" parent="."]
margin_right = 100.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
text = "Opponent's  money on the table:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextInstr" type="RichTextLabel" parent="."]
margin_left = 420.0
margin_top = 150.0
margin_right = 820.0
margin_bottom = 310.0
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextAmt" type="RichTextLabel" parent="."]
visible = false
margin_left = 760.0
margin_top = 470.0
margin_right = 890.0
margin_bottom = 530.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextRound" type="RichTextLabel" parent="."]
margin_left = 760.0
margin_right = 890.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMoneyHolder" type="Sprite" parent="."]
position = Vector2( 500, 530 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 2 )

[node name="OppMoneyHolder" type="Sprite" parent="."]
position = Vector2( 500, 70 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 2 )

[node name="PlayerLeft10" type="Sprite" parent="."]
visible = false
position = Vector2( 380, 530 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="OppLeft10" type="Sprite" parent="."]
visible = false
position = Vector2( 380, 70 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="PlayerRight10" type="Sprite" parent="."]
visible = false
position = Vector2( 620, 530 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="OppRight10" type="Sprite" parent="."]
visible = false
position = Vector2( 620, 70 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="RightCardBack" type="TextureRect" parent="."]
visible = false
margin_left = 850.0
margin_top = 160.0
margin_right = 1851.0
margin_bottom = 1561.0
rect_scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftCardBack" type="TextureRect" parent="."]
margin_left = 40.0
margin_top = 160.0
margin_right = 1041.0
margin_bottom = 1561.0
rect_scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ace" type="Sprite" parent="."]
visible = false
position = Vector2( 200, 200 )
scale = Vector2( 0.85, 0.66 )
texture = ExtResource( 6 )

[node name="C1" type="Sprite" parent="."]
visible = false
position = Vector2( 200, 200 )
scale = Vector2( 0.75, 0.56 )

[node name="C2" type="Sprite" parent="."]
visible = false
position = Vector2( 300, 200 )
scale = Vector2( 0.75, 0.56 )

[node name="C3" type="Sprite" parent="."]
visible = false
position = Vector2( 400, 200 )
scale = Vector2( 0.75, 0.56 )

[node name="C4" type="Sprite" parent="."]
visible = false
position = Vector2( 500, 200 )
scale = Vector2( 0.75, 0.56 )

[node name="C5" type="Sprite" parent="."]
visible = false
position = Vector2( 600, 200 )
scale = Vector2( 0.75, 0.56 )

[node name="LeftAce" type="Sprite" parent="."]
visible = false
position = Vector2( 121.222, 270.747 )
scale = Vector2( 0.38, 0.38 )
texture = ExtResource( 6 )

[node name="RightAce" type="Sprite" parent="."]
visible = false
position = Vector2( 928, 270.747 )
scale = Vector2( 0.38, 0.38 )
texture = ExtResource( 6 )

[node name="TwoSpades" type="Sprite" parent="."]
visible = false
position = Vector2( 200, 200 )
scale = Vector2( 0.66, 0.5 )
texture = ExtResource( 5 )

[node name="LeftTwoSpades" type="Sprite" parent="."]
visible = false
position = Vector2( 120.529, 271.495 )
scale = Vector2( 0.27778, 0.287602 )
texture = ExtResource( 5 )

[node name="RightTwoSpades" type="Sprite" parent="."]
visible = false
position = Vector2( 928, 271.495 )
scale = Vector2( 0.27778, 0.287602 )
texture = ExtResource( 5 )
[connection signal="button_down" from="ButtonLeft" to="." method="_on_ButtonLeft_button_down"]
[connection signal="pressed" from="ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="button_down" from="ButtonRight" to="." method="_on_ButtonRight_button_down"]
[connection signal="pressed" from="ButtonRight" to="." method="_on_ButtonRight_pressed"]
[connection signal="gui_input" from="RightCardBack" to="." method="_on_RightCardBack_gui_input"]
[connection signal="gui_input" from="LeftCardBack" to="." method="_on_LeftCardBack_gui_input"]
